# CSAF-Netbox-Plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: labler.yml
csaf/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
csaf/api/: serializers.py  urls.py  views.py
csaf/migrations/: 0001_initial.py  0002_alter_csafmatch_score_alter_csafmatch_time.py  0002_alter_csafmatch_software.py  0003_rename_url_csafdocument_docurl.py  0004_alter_csafdocument_docurl.py  0005_csafmatch_product_name_id_csafmatch_csafmatch_unique.py  0006_alter_csafdocument_title.py  0007_alter_csafdocument_options_alter_csafmatch_options_and_more.py  0008_csafvulnerability.py  0009_csafdocument_product_tree.py  0010_csafmatch_module_csafvulnerability_tags_and_more.py  0010_csafvulnerability_product_ids.py  0011_merge_20260318_1114.py  0012_csafvulnerability_tags_and_more.py  0013_csafmatchvulnerabilityremediation.py  0014_csafdocument_tracking_id.py  0015_remove_csafmatch_csafmatch_unique_and_more.py  0016_csafdocument_next_retry_at.py
csaf/templates/csaf/: config.html  configuration.html  csaf_asset_vulnerability_list.html  csafdocument.html  csafdocument_add_by_name.html  csafdocument_add_by_tracking_id.html  csafdocument_list.html  csafmatch.html  csafmatch_comparison.html  csafmatch_list.html  csafmatches_for_csafdocument.html  csafvulnerability.html  dashboard.html  synchronisers.html
